Update for the Discount Code Web page to have a jQuery DataTables rendering of the JSON data from the List of DiscountCode Objects.

--- a/restmvc/src/main/webapp/WEB-INF/template/viewTemplate.xhtml
+++ b/restmvc/src/main/webapp/WEB-INF/template/viewTemplate.xhtml
@@ -36,7 +36,7 @@
     <rm:copyright></rm:copyright>
   </footer>
   <script src="#{assetBean.jqueryJsUrl}"></script>
-  <ui:insert name="viewJS"></ui:insert>
+  <ui:insert name="javaScriptLibraries"></ui:insert>
   <ui:insert name="beforeBodyEnd"></ui:insert>
 </body>
 </html>
