Updated to make it easier to edit HTML5 elements in Eclipse by placing the HTML DOCTYPE at the top and the ui:composition element inside the html elements.

--- a/restmvc/src/main/webapp/WEB-INF/view/discountCode.xhtml
+++ b/restmvc/src/main/webapp/WEB-INF/view/discountCode.xhtml
@@ -1,8 +1,8 @@
-<?xml version='1.0' encoding='UTF-8' ?>
-<ui:composition xmlns="http://www.w3.org/1999/xhtml"
+<!DOCTYPE html>
+<html xmlns="http://www.w3.org/1999/xhtml"
   xmlns:ui="http://java.sun.com/jsf/facelets"
-    xmlns:rm="http://java.sun.com/jsf/composite/rm/component"
-  template="../template/viewTemplate.xhtml">
+  xmlns:rm="http://java.sun.com/jsf/composite/rm/component">
+<ui:composition template="../template/viewTemplate.xhtml">
 
   <ui:define name="viewTitle">Discount Code</ui:define>
 
@@ -42,6 +42,7 @@
         </tbody> 
       </table> 
     </section>
+    
   </ui:define>
 
   <ui:define name="javaScriptLibraries">
@@ -68,3 +69,4 @@
   </ui:define>
 
 </ui:composition>
+</html>
