--- a/restmvc/src/main/webapp/WEB-INF/view/welcome.xhtml
+++ b/restmvc/src/main/webapp/WEB-INF/view/welcome.xhtml
@@ -1,7 +1,7 @@
-<?xml version='1.0' encoding='UTF-8' ?>
-<ui:composition xmlns="http://www.w3.org/1999/xhtml"
-  xmlns:ui="http://java.sun.com/jsf/facelets"
-  template="../template/viewTemplate.xhtml">
+<!DOCTYPE html>
+<html xmlns="http://www.w3.org/1999/xhtml"
+  xmlns:ui="http://java.sun.com/jsf/facelets">
+<ui:composition template="../template/viewTemplate.xhtml">
 
   <ui:define name="viewTitle">Welcome</ui:define>
 
@@ -32,3 +32,4 @@
   </ui:define>
 
 </ui:composition>
+</html>
